# lukzmu.github.io

./: .env.example  .gitignore  .gitlab-ci.yml  Makefile  README.md  archives.html  authors.html  categories.html  docker-compose.yml  index.html  pyproject.toml  tags.html
.github/workflows/: pages.yml
.github/workflows/composite/build_base/: action.yml
.github/workflows/composite/build_dev/: action.yml
.github/workflows/composite/build_prod/: action.yml
compose/: Dockerfile  entrypoint.sh
src/: tasks.py
src/animal/: mapper.py  repository.py
src/core/: settings.py  utils.py
src/data/: animals.yml  events.yml  footer_links.yml  people.yml  social.yml
src/event/: dto.py  mapper.py  repository.py
src/footer/: dto.py  mapper.py  repository.py
src/person/: dto.py  mapper.py  repository.py
src/social/: dto.py  mapper.py  repository.py
src/themes/core/static/css/: animations.css  mystyles.css
src/themes/core/templates/: base.html  index.html
src/themes/core/templates/partial/: animals.html  events.html  footer.html  people.html  welcome.html
tests/animal/: animal_mapper_test.py  animal_repository_test.py  conftest.py
tests/event/: conftest.py  event_mapper_test.py  event_repository_test.py
tests/person/: conftest.py  person_mapper_test.py  person_repository_test.py
tests/social/: conftest.py  social_media_mapper_test.py  social_media_repository_test.py
