[tool.poetry]
name = "zmudzinski-me"
version = "1.0.0"
description = "Family website written using Pelican."
authors = ["Lukasz Zmudzinski <lukasz@zmudzinski.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pelican = "^4.8.0"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.272"
mypy = "^1.3.0"
pytest = "^7.4.0"
bandit = "^1.7.5"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "I",  # isort errors
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
omit = [
    "src/core/settings.py",
    "src/tasks.py",
    "*/dto.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = ".pytest_coverage"
